Fixed game detail page and changed the font-styles to make them more easily visible

--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -1,3 +1,5 @@
+@import './mixins.scss';
+
 .container{
   margin:   0;
   padding:  0;
@@ -7,9 +9,12 @@
   position:         relative;
   width:            100%;
   height:           300px;
-  perspective:      400px;
+  perspective:      800px;
   overflow:         hidden;
   background-color: #323232;
+  @media screen and (min-width: 768px){
+    height: 400px;
+  }
 }
 
 .h1{
@@ -28,10 +33,14 @@
 }
 
 .welcome{
-  padding:                    100px 20px;
+  padding:                    100px 0px 100px  0px;
+  margin:                     0 auto;
   font-size:                  32px;
   color:                      white;
   background-image:           linear-gradient(90deg, #BF55EC, #FE5F55 60%);
+  @media screen and (max-width: 768px){
+    padding:                  100px 20px;
+  }
 }
 
 .explore{
@@ -46,14 +55,5 @@
   border-radius:  5px;
   text-align:     center;
   cursor:         pointer;
-}
-
-@media screen and (min-width: 768px) {
-  .cover{
-    height: 800px;
-  }
-
-  .welcome{
-    padding: 100px 40% 100px 1  0px;
-  }
+  @include        hover-color(#FFFFFF);
 }
